js/js.translator/testData/incremental/invalidation/fakeOverrideClassFunctionQualifiersWithCrossModuleInliner/lib1/l1.9.kt
open class Module2OpenClass {
    public fun testFunction2() = 20
    inline public fun testFunction22() = 2201

    inline public val testField222: Int
        get() = 22201
}
